--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -17,9 +17,9 @@ img {
   height: auto;
 }
 
-.no-padding {
-  padding: 0;
-}
+nav { background-color: rgba(0,0,0,0.7); }
+
+.no-padding { padding: 0; }
 
 @media(max-width:$small-screen){
   .nav-icons {
@@ -29,6 +29,8 @@ img {
 
 
 // ===== 2. HOVER ===== //
+$movement-size: 10px;
+
 @mixin hover-transform($transform) {
   transition: transform 0.5s ease;
 
@@ -36,20 +38,16 @@ img {
     transform: $transform;
   }
 }
-$movement-size: 10px;
+
 .hover-right { @include hover-transform(translateX($movement-size)) }
 .hover-left { @include hover-transform(translateX(-$movement-size)) }
 
 
 // ===== 3. MAIN ===== //
-.home {
+.page-home {
   section {
     padding-top: 1em;
     padding-bottom: 1em;
-  }
-
-  nav {
-    background-color: rgba(0,0,0,0.7);
   }
 
   .section-heading {
@@ -61,6 +59,13 @@ $movement-size: 10px;
   #home-map {
     width: 100%;
     height: 400px;
+  }
+}
+
+.page-start {
+  .tabs {
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
