--- a/static/scss/materialize/components/_cards.scss
+++ b/static/scss/materialize/components/_cards.scss
@@ -21,6 +21,8 @@
 
   .card-title {
     color: $card-bg-color;
+    background-color: $dark-transparent;
+    border-top-right-radius: 10px;
     font-size: 24px;
     font-weight: 300;
     &.activator {
