login/register forms

--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -67,6 +67,11 @@ $movement-size: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
   }
+
+  form {
+    // background-color: $brand-light-gray;
+    // border-radius: $border-radius;
+  }
 }
 
 
