--- a/main/templates/main/start.html
+++ b/main/templates/main/start.html
@@ -29,8 +29,62 @@
           <li class="tab col m4 s4"><a href="#posts">Posts</a></li>
         </ul>
       </div>
-      <div id="register" class="col s12">Test 1</div>
-      <div id="login" class="col s12">Test 2</div>
+      <div id="register" class="col s12">
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="register-first-name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="register-last-name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="register-email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="register-password1" type="password" class="validate">
+                <label for="register-password1">Password</label>
+              </div>
+              <div class="input-field col s12">
+                <input id="register-password2" type="password" class="validate">
+                <label for="register-password2">Password Repeat</label>
+              </div>
+            </div>
+            <button class="btn right waves-effect waves-light" type="submit" name="action">Register
+              <i class="material-icons right">arrow_forward</i>
+            </button>
+          </form>
+        </div>
+      </div>
+      <div id="login" class="col s12">
+        <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="login-email" type="email" class="validate">
+                <label for="login-email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="login-password" type="password" class="validate">
+                <label for="login-password">Password</label>
+              </div>
+            </div>
+            <button class="btn right waves-effect waves-light" type="submit" name="action">Login
+              <i class="material-icons right">arrow_forward</i>
+            </button>
+          </form>
+        </div>
+      </div>
       <div id="posts" class="col s12">
         {% for post in post_list %}
           <div class="col s12 m6">
