--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -1,3 +1,10 @@
 // materialize overrides
 $primary-color: #2988bc;
 $secondary-color: #ED8C72;
+
+// brand colors
+$brand-light-gray: #eee;
+
+
+// property defaults
+$border-radius: 5px;
