--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,7 +5,9 @@
     <div class="navbar-fixed">
       <nav class="nav-icons">
         <div class="nav-wrapper">
-          {% include 'maininclude/logo.html' %}
+          <a href="#" class="brand-logo center">
+            {% include 'maininclude/logo.html' %}
+          </a>
           <ul class="left">
             <li class="hover-right">
               <a href="#" onclick="scrollMap()">Map <i class="material-icons left">map</i></a>
