--- a/main/templates/main/start.html
+++ b/main/templates/main/start.html
@@ -5,15 +5,17 @@
   <div class="navbar-fixed">
     <nav class="nav-icons">
       <div class="nav-wrapper">
-        {% include 'maininclude/logo.html' %}
+        <a href="#" class="brand-logo center">
+          {% include 'maininclude/logo.html' %}
+        </a>
         <ul class="left">
           <li class="hover-right">
-            <a href="#" onclick="scrollMap()">Back <i class="material-icons left">arrow_back</i></a>
+            <a href="{% url 'main-home' %}" onclick="scrollMap()">Back <i class="material-icons left">arrow_back</i></a>
           </li>
         </ul>
         <ul class="right">
           <li class="hover-left">
-            <a href="{% url 'main-start' %}">Search <i class="material-icons right">search</i></a>
+            <a href="{% url 'main-home' %}">Search <i class="material-icons right">search</i></a>
           </li>
         </ul>
       </div>
@@ -29,7 +31,7 @@
           <li class="tab col m4 s4"><a href="#posts">Posts</a></li>
         </ul>
       </div>
-      <div id="register" class="col s12">
+      <div id="register" class="col s12 m8 offset-m2">
         <div class="row">
           <form class="col s12">
             <div class="row">
@@ -64,7 +66,7 @@
           </form>
         </div>
       </div>
-      <div id="login" class="col s12">
+      <div id="login" class="col s12 m8 offset-m2">
         <div class="row">
           <form class="col s12">
             <div class="row">
