--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -5,6 +5,10 @@ $secondary-color: #ED8C72;
 // brand colors
 $brand-light-gray: #eee;
 
+$dark-texture: url("/static/img/textures/texture_dark.png") repeat;
+$medium-texture: url("/static/img/textures/texture_medium.png") repeat;
+$light-texture: url("/static/img/textures/texture_light.png") repeat;
+
 
 // property defaults
 $border-radius: 5px;
