--- a/main/templates/main/start.html
+++ b/main/templates/main/start.html
@@ -2,25 +2,13 @@
 
 {% block body %}
 <div class="page-start">
-  <div class="navbar-fixed">
-    <nav class="nav-icons">
-      <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">
-          {% include 'maininclude/logo.html' %}
-        </a>
-        <ul class="left">
-          <li class="hover-right">
-            <a href="{% url 'main-home' %}" onclick="scrollMap()">Back <i class="material-icons left">arrow_back</i></a>
-          </li>
-        </ul>
-        <ul class="right">
-          <li class="hover-left">
-            <a href="{% url 'main-home' %}">Search <i class="material-icons right">search</i></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
+  <nav class="nav-transparent">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center">
+        {% include 'maininclude/logo.html' %}
+      </a>
+    </div>
+  </nav>
 
   <div class="container">
     <div class="row">
@@ -60,7 +48,7 @@
                 <label for="register-password2">Password Repeat</label>
               </div>
             </div>
-            <button class="btn right waves-effect waves-light" type="submit" name="action">Register
+            <button class="btn hover-right right waves-effect waves-light" type="submit" name="action">Register
               <i class="material-icons right">arrow_forward</i>
             </button>
           </form>
@@ -81,29 +69,36 @@
                 <label for="login-password">Password</label>
               </div>
             </div>
-            <button class="btn right waves-effect waves-light" type="submit" name="action">Login
+            <button class="btn hover-right right waves-effect waves-light" type="submit" name="action">Login
               <i class="material-icons right">arrow_forward</i>
             </button>
           </form>
         </div>
       </div>
       <div id="posts" class="col s12">
-        {% for post in post_list %}
-          <div class="col s12 m6">
-            <div class="card medium">
-              <div class="card-image">
-                <img src="{{post.image.url}}">
-                <span class="card-title">{{post.title}}</span>
-              </div>
-              <div class="card-content">
-                <p>{{post.headline}}</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
+        <div class="row">
+          {% for post in post_list %}
+            <div class="col s12 m6">
+              <div class="card medium">
+                <div class="card-image">
+                  <img src="{{post.image.url}}">
+                  <span class="card-title">{{post.title}}</span>
+                </div>
+                <div class="card-content">
+                  <p>{{post.headline}}</p>
+                </div>
+                <div class="card-action">
+                  <a href="#">This is a link</a>
+                </div>
               </div>
             </div>
-          </div>
-        {% endfor %}
+          {% endfor %}
+        </div>
+        <div class="row">
+          <a class="btn-large hover-right right waves-effect waves-light" href="{% url 'blog-all-posts' %}">
+            View All <i class="material-icons right">arrow_forward</i>
+          </a>
+        </div>
       </div>
     </div>
   </div>
