--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -9,6 +9,8 @@ $dark-texture: url("/static/img/textures/texture_dark.png") repeat;
 $medium-texture: url("/static/img/textures/texture_medium.png") repeat;
 $light-texture: url("/static/img/textures/texture_light.png") repeat;
 
+$transparent: transparentize(white, 1);
+
 
 // property defaults
 $border-radius: 5px;
