--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -1,5 +1,5 @@
-{% extends "bloginclude/reader.html" %}
+{% extends "bloginclude/side_layout.html" %}
 
-{% block reader_body %}
+{% block sidelayout_content %}
   {{post_list}}
 {% endblock %}
