--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -8,10 +8,19 @@
   2. Hover
   3. Main
   4. Blog
+  5. Side Layout
 */
 
 
 // ===== 1. GLOBAL ===== //
+.full-height {
+  height: 100%;
+  min-height: 100%;
+}
+
+
+body, html { @extend .full-height; }
+
 img {
   width: 100%;
   height: auto;
@@ -109,3 +118,31 @@ $movement-size: 10px;
 
 
 // ===== 4. BLOG ===== //
+
+
+
+// ===== 4. SIDE LAYOUT ===== //
+$nav-width: 20%;
+
+.side-layout {
+  @extend .full-height;
+  overflow-y: hidden;
+
+  nav {
+    @extend .full-height;
+    width: $nav-width;
+    float: left;
+
+    ul {
+      li {
+        display: block;
+      }
+    }
+  }
+
+  main {
+    @extend .full-height;
+    width: (100 - $nav-width);
+    overflow-y: scroll;
+  }
+}
