--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -1,5 +1,13 @@
 {% extends "bloginclude/side_layout.html" %}
 
 {% block sidelayout_content %}
-  {{post_list}}
+  <div class="container">
+    {% for post in post_list %}
+        <h3>{{post.title}}</h3>
+        <a href="{{post.get_absolute_url}}">
+          <img src="{{post.image.url}}">
+        </a>
+      <p>{{post.headline}}</p>
+    {% endfor %}
+  </div>
 {% endblock %}
