--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+// @import 'hover';
 @import 'materialize/materialize';
 @import 'fonts';
 
@@ -60,6 +61,11 @@ footer { background: $dark-texture; }
   }
 }
 
+.accent-text {
+  color: $brand-medium-gray;
+  font-style: italic;
+}
+
 @media(max-width:$small-screen){
   .nav-icons {
     i { line-height: $navbar-height-mobile; }
@@ -118,7 +124,43 @@ $movement-size: 10px;
 
 
 // ===== 4. BLOG ===== //
+.blog-home {
 
+}
+
+.blog-article {
+  margin-bottom: 20px;
+}
+
+.blog-article__header{
+  .img-main {
+    @extend .z-depth-3;
+  }
+
+  .headline {
+    @extend .accent-text;
+    text-align: center;
+  }
+}
+
+.blog-article__body{
+
+}
+
+.blog-article__footer{
+  @extend .z-depth-2;
+
+  text-align: center;
+  padding: 10px;
+
+  .signature { @extend .accent-text; }
+
+  .social-row {
+    text-align: center;
+
+    i { padding: 5px; }
+  }
+}
 
 
 // ===== 4. SIDE LAYOUT ===== //
@@ -144,5 +186,6 @@ $nav-width: 20%;
     @extend .full-height;
     width: (100 - $nav-width);
     overflow-y: scroll;
+    padding-bottom: 20px;
   }
 }
