--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -177,8 +177,20 @@ $nav-width: 20%;
 
     ul {
       li {
+        @extend .hover-right;
+
         display: block;
+        width: 100%;
+
+        i { line-height: 2.5em; }
       }
+    }
+
+    .logo-container {
+      text-align: center;
+
+      padding-right: 20%;
+      padding-left: 20%;
     }
   }
 
