--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -1,6 +1,7 @@
 // materialize overrides
 $primary-color: #2988bc;
 $secondary-color: #ED8C72;
+$tertiary-color: #26e9ff;
 
 // brand colors
 $brand-light-gray: #eee;
