--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -10,6 +10,7 @@
   3. Main
   4. Blog
   5. Side Layout
+  6. Auth
 */
 
 
@@ -30,6 +31,10 @@ img {
 nav { background: transparentize(black, 0.2); }
 
 footer { background: $dark-texture; }
+
+ul.horizontal {
+  li { display: inline; }
+}
 
 // textures
 .light-texture { background: $light-texture; }
@@ -162,8 +167,24 @@ $movement-size: 10px;
   }
 }
 
+.all-posts {
+  .article-container {
 
-// ===== 4. SIDE LAYOUT ===== //
+    h1 { font-size: 2.3em; }
+
+    img {
+      transition: $transition;
+
+      &:hover {
+        @extend .z-depth-2;
+      }
+    }
+
+  }
+}
+
+
+// ===== 5. SIDE LAYOUT ===== //
 $nav-width: 20%;
 
 .side-layout {
@@ -199,5 +220,55 @@ $nav-width: 20%;
     width: (100 - $nav-width);
     overflow-y: scroll;
     padding-bottom: 20px;
+  }
+}
+
+
+// ===== 6. AUTHORIZATION ===== //
+// override django all auth styles
+
+.auth {
+  background: $light-texture;
+  margin-bottom: 0;
+
+  h1 {
+    font-size: 3em;
+    margin-top: 0;
+  }
+
+  .options {
+    @extend .horizontal;
+
+    .left { @extend .hover-left;}
+    .right { @extend .hover-right;}
+  }
+
+  .upper {
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+
+    img { width: 40%; }
+  }
+
+  .lower {
+    @extend .z-depth-3;
+    background: white;
+    padding: 5px;
+    border-radius: $border-radius;
+  }
+}
+
+.auth__content {
+  p { text-align: left; }
+
+  input[type="submit"],
+  button[type="submit"]{
+    @extend .btn;
+    @extend .right;
+  }
+
+  .socialaccount_providers {
+    img { border-radius: $border-radius; }
   }
 }
