nav items active

--- a/blog/templates/bloginclude/nav_items.html
+++ b/blog/templates/bloginclude/nav_items.html
@@ -1,17 +1,24 @@
 <li>
-  <a href="{% url 'blog-all-posts' %}"><i class="material-icons left">people</i>Posts</a>
-</li>
-<li>
-  <a href="{% url 'blog-all-blogs' %}">
-    <i class="material-icons left">whatshot</i>Blogs
+  <a {% if page == "posts" %}class="active"{% endif %} href="{% url 'blog-all-posts' %}">
+    <i class="material-icons left">people</i> Posts
   </a>
 </li>
+<li>
+  <a {% if page == "blogs" %}class="active"{% endif %} href="{% url 'blog-all-blogs' %}">
+    <i class="material-icons left">whatshot</i> Blogs
+  </a>
+</li>
+
 {% if request.user.user_blog %}
   <li>
-    <a href="{% url 'blog-settings' %}"><i class="material-icons left">settings</i> Settings</a>
+    <a {% if page == "settings" %}class="active"{% endif %} href="{% url 'blog-settings' %}">
+      <i class="material-icons left">settings</i> Settings
+    </a>
   </li>
 {% else %}
   <li>
-    <a href="{% url 'blog-create' %}"><i class="material-icons left">add</i> Create Blog</a>
+    <a {% if page == "create" %}class="active"{% endif %} href="{% url 'blog-create' %}">
+      <i class="material-icons left">add</i> Create Blog
+    </a>
   </li>
 {% endif %}
