--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -12,6 +12,7 @@ $medium-texture: url("/static/img/textures/texture_medium.png") repeat;
 $light-texture: url("/static/img/textures/texture_light.png") repeat;
 
 $transparent: transparentize(white, 1);
+$dark-transparent: transparentize(black, 0.2);
 
 
 // property defaults
