--- a/blog/templates/bloginclude/nav_items.html
+++ b/blog/templates/bloginclude/nav_items.html
@@ -1,6 +1,6 @@
 <li>
   <a {% if page == "posts" %}class="active"{% endif %} href="{% url 'blog-all-posts' %}">
-    <i class="material-icons left">people</i> Posts
+    <i class="material-icons left">library_books</i> Posts
   </a>
 </li>
 <li>
