--- a/blog/templates/bloginclude/side_layout.html
+++ b/blog/templates/bloginclude/side_layout.html
@@ -7,7 +7,7 @@
 <div class="side-layout">
   {% block sidelayout_nav %}
     <nav>
-      <div class="logo-container">
+      <div class="logo-container hide-on-med-and-down">
         <img class="logo" src="{% static 'img/logo_light.png' %}">
       </div>
       <ul class="hide-on-med-and-down">
