--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -6,15 +6,18 @@
       <div class="row">
         <div class="col s12 m12">
           <div class="card">
-            <div class="card-content">
-              <span class="card-title">{{blog}}</span>
-              <p>{{blog.description}}</p>
+            <div class="card-image waves-effect waves-block waves-light">
+              <img class="activator" src="{{ blog.get_image_url }}">
             </div>
-            <div class="card-action">
-              <a class="btn right hover-right" href="{{blog.get_absolute_url}}">
-                View {{ blog }}
-              </a>
-              <br><br>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">{{blog}}<i class="material-icons right">more_vert</i></span>
+              <p><a class="btn hover-right" href="{{blog.get_absolute_url}}">
+                View Blog <i class="material-icons right">library_books</i>
+              </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">{{blog}}<i class="material-icons right">close</i></span>
+              <p>{{blog.description}}</p>
             </div>
           </div>
         </div>
