--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -11,9 +11,9 @@
           </a>
           <h5 class="accent-text">{{post.headline}}</h5>
           <p class="preview">{{post.body|safe|truncatewords_html:30}}</p>
-          <button class="btn right hover-right">
+          <a href="{{post.get_absolute_url}}" class="btn right hover-right">
             Read More <i class="material-icons right">arrow_forward</i>
-          </button>
+          </a>
           <br>
         </div>
       {% endfor %}
