--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -11,14 +11,13 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
 
-      <script type="text/javascript" src="{% static 'jquery/dist/jquery.min.js' %}"></script>
-      <script type="text/javascript" src="{% static 'materialize/dist/js/materialize.min.js' %}"></script>
-
     {% endblock %}
   </head>
   <body>
     {% block body %}{% endblock %}
 
+    <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
     {% block js %}{% endblock %}
   </body>
 </html>
