move to layouts template

--- a/blog/templates/blog/create.html
+++ b/blog/templates/blog/create.html
@@ -1,4 +1,4 @@
-{% extends "bloginclude/side_layout.html" %}
+{% extends "layouts/2col.html" %}
 
 {% block sidelayout_content %}
   Create your blog here.
