--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,11 +1,19 @@
-{% extends "bloginclude/side_layout.html" %}
+{% extends "layouts/2col.html" %}
 
 {% block sidelayout_content %}
-  <p>{{personalblog}}</p>
+  <div class="blog-home">
+    <div class="inner-container">
+      <h1 class="align-center">{{personalblog}}</h1>
 
-  {% for post in personalblog.posts.all %}
-    <a href="{{post.get_absolute_url}}">{{post.title}}</a>
-  {% endfor %}
+      {% for post in personalblog.posts.all %}
+        <a href="{{post.get_absolute_url}}">{{post.title}}</a>
+      {% endfor %}
 
-  <a href="{% url 'blog-home' %}">Blog Home</a>
+      <a href="{% url 'blog-home' %}">Blog Home</a>
+    </div>
+
+    <aside style="height: 100%; right: 0; position: fixed; background: black;">
+      Hello
+    </aside>
+  </div>
 {% endblock %}
