frontend post search

--- a/blog/templates/blog/all_posts.html
+++ b/blog/templates/blog/all_posts.html
@@ -1,11 +1,25 @@
 {% extends "layouts/2col.html" %}
 
 {% block sidelayout_content %}
-  <div class="all-posts container">
-    <div class="row">
-      {% for post in post_list %}
-        {% include "bloginclude/post_preview.html" %}
-      {% endfor %}
+  <div class="row">
+    <form class="search-form">
+      <div class="input-field col m4 s8">
+        <i class="material-icons prefix">search</i>
+        <input id="search" type="text" class="validate">
+        <label for="search">Search</label>
+      </div>
+      <div class="col s4">
+        <button type="submit" class="btn">Go</button>
+      </div>
+    </form>
+  </div>
+  <div class="row">
+    <div class="all-posts container">
+      <div class="row">
+        {% for post in post_list %}
+          {% include "bloginclude/post_preview.html" %}
+        {% endfor %}
+      </div>
     </div>
   </div>
 {% endblock %}
