--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -151,7 +151,7 @@ $movement-size: 10px;
 }
 
 .search-form {
-  button { margin-top: 20px;}
+  button, a { margin-top: 20px;}
 }
 
 .blog-map-container {
