--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,5 @@
 {% extends "maininclude/base.html" %}
+{% load staticfiles %}
 
 {% block body %}
   <div class="page-home">
@@ -21,90 +22,129 @@
         </div>
       </nav>
     </div>
+
     <section class="header no-padding">
-      <div class="parallax-container">
-        <div class="parallax"><img src="//placehold.it/1200x600"></div>
+      <img src="{% static 'img/landing.jpg' %}">
+      <div class="overlay">
+        <div class="inner">
+          <h1 data-sr="move 50px, enter top">Travel Blog Wave</h1>
+          <h5 data-sr="wait 0.5s, move 50px, enter top"><a class="btn" href="{% url 'blog-create' %}">
+            Create your travel blog
+          </a></h5>
+        </div>
       </div>
     </section>
 
     <section class="summary">
       <div class="row">
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
-            </div>
+        <div class="container">
+          <div class="col s12">
+            <ul class="tabs">
+              <li class="tab col s3"><a class="active" href="#create-info">Create Your Blog</a></li>
+              <li class="tab col s3"><a href="#read-info">Read Blogs</a></li>
+            </ul>
           </div>
         </div>
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
+      </div>
+      <div class="row card-row">
+        <div id="create-info">
+          <div class="col m4 s12" data-sr="move 50px, enter left">
+            <div class="card-panel">
+              <div class="icon-container">
+                <i class="material-icons">add</i>
+              </div>
+              <h3>Create Blog</h3>
+              <div class="text-container">
+                <span>
+                  Creating your blog could not be easier. Enjoy all the benefits of a travel blog platform, built by travel bloggers like yourself. Have ideas? Let us know!
+                </span>
+              </div>
             </div>
           </div>
+          <div class="col m4 s12" data-sr="move 50px, enter left, wait 0.5s">
+            <div class="card-panel">
+              <div class="icon-container">
+                <i class="material-icons">library_books</i>
+              </div>
+              <h3>Write Posts</h3>
+              <div class="text-container">
+                <span>
+                  Write drafts of your articles, view previews, and then publish your articles. Easily make edits to your article if needed.
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="col m4 s12" data-sr="move 50px, enter left, wait 1s">
+            <div class="card-panel">
+              <div class="icon-container">
+                <i class="material-icons">map</i>
+              </div>
+              <h3>Travel Map</h3>
+              <div class="text-container">
+                <span>
+                  One of the coolest features of Travel Blog Wave is being able to view articles on a map. Track where you have been, and plan where you will go.
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="row center-align">
+            <a class="btn-large btn-primary hover-right" data-sr="wait 3s, enter left, move 100px">
+              Create your blog <i class="material-icons right">arrow_forward</i>
+              <i class="material-icons left">library_books</i>
+            </a>
+          </div>
         </div>
-        <div class="col s12 m4">
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+        <div id="read-info" class="row">
+          <div class="col m4 s12" data-sr="move 50px, enter left">
+            <div class="card-panel">
+              <div class="icon-container">
+                <i class="material-icons">search</i>
+              </div>
+              <h3>Search Articles</h3>
+              <div class="text-container">
+                <span>
+                  Search by text, country or topic. Don't worry, we'll show you what you're looking for!
+                </span>
+              </div>
             </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
+          </div>
+          <div class="col m4 s12" data-sr="move 50px, enter left, wait 0.5s">
+            <div class="card-panel">
+              <div class="icon-container">
+                <i class="material-icons">map</i>
+              </div>
+              <h3>View on Map</h3>
+              <div class="text-container">
+                <span>
+                  Get a visual representation of the articles that you're looking for. Works great for looking at a specific country, region or city.
+                </span>
+              </div>
             </div>
+          </div>
+          <div class="col m4 s12" data-sr="move 50px, enter left, wait 1s">
+            <div class="card-panel">
+              <div class="icon-container">
+                <i class="material-icons">dashboard</i>
+              </div>
+              <h3>Add to Stream</h3>
+              <div class="text-container">
+                <span>
+                  Have some bloggers that you like to follow their journey? Add multiple blogs to your stream and get all your favorite articles in one place.
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="row center-align">
+            <a class="btn-large btn-primary hover-right" data-sr="wait 3s, enter left, move 100px">
+              Search Articles <i class="material-icons right">arrow_forward</i>
+              <i class="material-icons left">search</i>
+            </a>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="user-actions">
-      <div class="row">
-        <div class="col s12 m6">
-          <h2 class="section-heading">Read Blogs</h2>
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6">
-          <h2 class="section-heading">Create Blog</h2>
-          <div class="card blue-grey darken-1">
-            <div class="card-content white-text">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="map" id="section-map">
+    <section class="map no-padding" id="section-map">
       <div id="home-map"></div>
     </section>
 
@@ -112,24 +152,23 @@
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Footer Content</h5>
-            <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            <h5 class="white-text">Create Travel Blog</h5>
+            <p class="grey-text text-lighten-4">Enjoy your travel blog on the platform built by travel bloggers for travel bloggers</p>
           </div>
           <div class="col l4 offset-l2 s12">
             <h5 class="white-text">Links</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-              <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+              <li><a class="grey-text text-lighten-3" href="{% url 'blog-create' %}">Create Travel Blog</a></li>
+              <li><a class="grey-text text-lighten-3" href="{% url 'blog-map' %}">Travel Blog Map</a></li>
+              <li><a class="grey-text text-lighten-3" href="{% url 'blog-all-posts' %}">Search Travel Articles</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer-copyright">
         <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        <a class="grey-text text-lighten-4 left" href="http://www.adamwester.me">© 2015 Adam Wester</a>
+        <a class="grey-text text-lighten-4 right" href="{% url 'blog-create' %}" data-sr="enter left, over 2s, move 100px">Register, be awesome</a>
         </div>
       </div>
     </footer>
@@ -142,7 +181,7 @@
   <script type="text/javascript">
     function scrollMap(){
       $('html, body').animate({
-        scrollTop: $("#section-map").offset().top
+        scrollTop: $("#section-map").offset().top - 62
       }, 2000);
     }
 
@@ -153,10 +192,12 @@
 
       // Create a map object and specify the DOM element for display.
       var map = new google.maps.Map(document.getElementById('home-map'), {
-        center: {lat: -34.397, lng: 150.644},
+        center: {lat: -13.163141, lng: -72.544963},
         scrollwheel: false,
-        zoom: 8
+        zoom: 4
       });
+
+      {% include "bloginclude/map_markers.html" %}
     });
   </script>
 {% endblock %}
