--- a/main/templates/maininclude/base.html
+++ b/main/templates/maininclude/base.html
@@ -10,7 +10,6 @@
       <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       <link rel="shortcut icon" href="{% static 'img/logo.ico' %}">
-
     {% endblock %}
   </head>
   <body>
@@ -18,6 +17,9 @@
 
     <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/materialize.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/scrollReveal.min.js' %}"></script>
+    <script>window.sr = new scrollReveal();</script>
+
     {% block js %}{% endblock %}
   </body>
 </html>
