--- a/static/scss/_variables.scss
+++ b/static/scss/_variables.scss
@@ -3,6 +3,9 @@ $primary-color: #2988bc;
 $secondary-color: #ED8C72;
 $tertiary-color: #26e9ff;
 
+$secondary-color-light: lighten(#ED8C72, 15%);
+$secondary-color-dark: darken(#ED8C72, 15%);
+
 // brand colors
 $brand-light-gray: #eee;
 $brand-medium-gray: #777;
