--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-// @import 'hover';
+@import 'mixins';
 @import 'materialize/materialize';
 @import 'fonts';
 
@@ -90,16 +90,11 @@ ul.horizontal {
 // ===== 2. HOVER ===== //
 $movement-size: 10px;
 
-@mixin hover-transform($transform) {
-  transition: transform 0.5s ease;
-
-  &:hover {
-    transform: $transform;
-  }
-}
-
 .hover-right { @include hover-transform(translateX($movement-size)) }
 .hover-left { @include hover-transform(translateX(-$movement-size)) }
+.hover-rotate { @include hover-transform(rotate(60deg)) }
+.hover-grow { @include hover-transform(scale(1.1)) }
+.hover-shrink { @include hover-transform(scale(0.9)) }
 
 
 // ===== 3. MAIN ===== //
@@ -107,6 +102,92 @@ $movement-size: 10px;
   section {
     padding-top: 1em;
     padding-bottom: 1em;
+  }
+
+  .header {
+    img {
+      @include filter(blur(5px));
+    }
+    .overlay {
+      text-align: center;
+      position: absolute;
+      bottom: 30%;
+
+      width: 50%;
+      left: 50%;
+
+      > .inner {
+        background-color: $light-transparent;
+        border-radius: $border-radius;
+        padding: 15px;
+        color: white;
+
+        position: relative;
+        left: -50%;
+
+        h1, p { font-weight: 200; }
+      }
+    }
+  }
+
+  .summary {
+    li.tab { font-size: 2em; }
+
+    .card-row {
+      $icon-size: 50px;
+      $icon-padding: 8px;
+
+      position: relative;
+      margin-top: $icon-size;
+
+      .card-panel {
+        position: relative;
+
+        h3 { text-align: center; }
+
+        i {
+          @extend .circle;
+          transition: all 0.5s ease-out;
+          border: 1px solid $secondary-color-light;
+          padding: $icon-padding;
+          font-size: $icon-size;
+
+          background-color: $secondary-color;
+          color: white;
+          margin-left: -50%;
+        }
+
+        .text-container {
+          margin-right: -$card-padding;
+          margin-left: -$card-padding;
+          margin-bottom: -$card-padding;
+          padding: $card-padding;
+          background-color: darken(white, 1%);
+          border-top: 2px solid darken(white, 10%);
+          height: 7em;
+        }
+
+        .icon-container {
+          transition: top 0.5s ease-out;
+          position: absolute;
+          top: -($icon-size/2 + $icon-padding);
+          left: 50%;
+        }
+
+        &:hover {
+          $growth: 1.2;
+          .icon-container {
+            top: -(($icon-size/2 + $icon-padding) * $growth);
+          }
+
+          i {
+            font-size: ($icon-size * $growth);
+            @include transform(scale($growth));
+            @include transform(rotate(60deg));
+          }
+        }
+      }
+    }
   }
 
   .section-heading {
@@ -117,8 +198,10 @@ $movement-size: 10px;
 
   #home-map {
     width: 100%;
-    height: 400px;
+    height: 600px;
   }
+
+  footer { margin-top: 0; }
 }
 
 .page-start {
