--- a/blog/templates/bloginclude/map_markers.html
+++ b/blog/templates/bloginclude/map_markers.html
@@ -19,6 +19,7 @@ var markerIcon = "{% static 'img/map_icon_sm.png' %}";
       position: {lat: {{post.lat}}, lng: {{post.lng}}},
       map: map,
       title: 'Hello World!',
+      animation: google.maps.Animation.DROP,
       icon: markerIcon
     });
 
