--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -27,7 +27,7 @@
       <img src="{% static 'img/landing.jpg' %}">
       <div class="overlay">
         <div class="inner">
-          <h1 data-sr="move 50px, enter top">Travel Blog Wave</h1>
+          <h1 class="title" data-sr="move 50px, enter top">Travel Blog Wave</h1>
           <h5 data-sr="wait 0.5s, move 50px, enter top"><a class="btn" href="{% url 'blog-create' %}">
             Create your travel blog
           </a></h5>
