font + small style changes

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -167,7 +167,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-        <a class="grey-text text-lighten-4 left" href="http://www.adamwester.me">© 2015 Adam Wester</a>
+        <a class="grey-text text-lighten-4 left" href="http://www.adamwester.me">© 2015 Travel Blog Wave</a>
         <a class="grey-text text-lighten-4 right" href="{% url 'blog-create' %}" data-sr="enter left, over 2s, move 100px">Register, be awesome</a>
         </div>
       </div>
