--- a/static/scss/_fonts.scss
+++ b/static/scss/_fonts.scss
@@ -7,6 +7,11 @@
     url(http://fonts.gstatic.com/s/materialicons/v7/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
 }
 
+@font-face {
+    font-family: soundbeat;
+    src: url("/static/font/NADC_soundbeat.ttf");
+}
+
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
