--- a/static/scss/app.scss
+++ b/static/scss/app.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
-@import 'materialize/materialize';
 @import 'fonts';
+@import 'materialize/materialize';
 
 
 /*
@@ -107,8 +107,9 @@ $movement-size: 10px;
 
   .header {
     .title {
-      font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    }
+       font-size: 5em;
+       font-family: soundbeat;
+     }
 
     .overlay {
       text-align: center;
@@ -128,11 +129,14 @@ $movement-size: 10px;
         left: -50%;
 
         h1, a { font-weight: 200; }
+
+        a { text-transform: none; }
       }
     }
   }
 
   .summary {
+    margin-top: 30px;
     li.tab {
       font-size: 3em;
 
