--- a/static/scss/materialize/components/_navbar.scss
+++ b/static/scss/materialize/components/_navbar.scss
@@ -89,7 +89,8 @@ nav {
       }
     }
     a {
-      font-size: 1rem;
+      font-size: 1.5rem;
+      font-weight: 200;
       color: $navbar-font-color;
       display: block;
       padding: 0 15px;
