--- a/main/templates/main/start.html
+++ b/main/templates/main/start.html
@@ -21,30 +21,31 @@
       </div>
       <div id="register" class="col s12 m8 offset-m2">
         <div class="row">
-          <form class="col s12">
+          <form class="col s12" action="/accounts/signup/" method="post">
+            {% csrf_token %}
             <div class="row">
               <div class="input-field col s6">
-                <input id="register-first-name" type="text" class="validate">
+                <input id="register-first-name" type="text" class="validate" name="first_name">
                 <label for="first_name">First Name</label>
               </div>
               <div class="input-field col s6">
-                <input id="register-last-name" type="text" class="validate">
+                <input id="register-last-name" type="text" class="validate" name="last_name">
                 <label for="last_name">Last Name</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="register-email" type="email" class="validate">
+                <input id="register-email" type="email" class="validate" name="email">
                 <label for="email">Email</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="register-password1" type="password" class="validate">
+                <input id="register-password1" type="password" class="validate" name="password1">
                 <label for="register-password1">Password</label>
               </div>
               <div class="input-field col s12">
-                <input id="register-password2" type="password" class="validate">
+                <input id="register-password2" type="password" class="validate" name="password2">
                 <label for="register-password2">Password Repeat</label>
               </div>
             </div>
@@ -56,16 +57,17 @@
       </div>
       <div id="login" class="col s12 m8 offset-m2">
         <div class="row">
-          <form class="col s12">
+          <form class="col s12" action="/accounts/login/" method="post">
+            {% csrf_token %}
             <div class="row">
               <div class="input-field col s12">
-                <input id="login-email" type="email" class="validate">
+                <input id="login-email" type="email" class="validate" name="login">
                 <label for="login-email">Email</label>
               </div>
             </div>
             <div class="row">
               <div class="input-field col s12">
-                <input id="login-password" type="password" class="validate">
+                <input id="login-password" type="password" class="validate" name="password">
                 <label for="login-password">Password</label>
               </div>
             </div>
